<resources>
    <string name="app_name">Rover controller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Robot controller</string>
    <string name="nav_header_subtitle" translatable="false">noone@nowhere.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Remote controller</string>
    <string name="menu_slideshow">Manual Control</string>
    <string name="enter_ip_address_hint">Enter IP address</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="connect_info">To connect to the robot use button in top right menu</string>
    <string name="send_button">Send</string>
    <string name="enter_message_hint">Message</string>
    <string name="error_IOException">Error while connecting to server: IOException</string>
    <string name="error_ClassNotFound">Error while connecting to server: ClassNotFound</string>
    <string name="error_InterruptedException">Error while connecting to server: InterruptedException</string>
    <string name="try_again">Try again</string>
    <string name="connected">Connected to server:</string>
    <string name="disconnected">Successfully disconnected from server</string>
    <string name="error_NoRouteToHostException">Error: NoRouteToHostException. Perhaps IP is incorrect or port 9876 is closed on server firewall?</string>
    <string name="error_ConnectException">Error: Conection was refused. Perhaps robot software is not running?</string>
    <string name="error_sending_message">Cound not send message, IOException</string>
    <string name="error_not_connected">Could not send message: No connection with robot</string>
    <string name="motor_speed_1">Left Motor Speed</string>
    <string name="motor_speed_2">Right Motor Speed</string>
    <string name="deprecated_text">DEPRECATED</string>
    <string name="no_connection_text">Not connected to robot</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="confirm_shutdown">You sure you want to shutdown the rover?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="controller">Controller</string>
    <string name="power">Power</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="front_lab">Front</string>
    <string name="front_right_lab">Front Right</string>
    <string name="right_lab">Right</string>
    <string name="right_bottom_lab">Right Bottom</string>
    <string name="bottom_lab">Bottom</string>
    <string name="bottom_left_lab">Bottom Left</string>
    <string name="left_lab">Left</string>
    <string name="left_front_lab">Left Front</string>
    <string name="center_lab">Center</string>
    <string name="left_power">Left Power</string>
    <string name="right_power">Right Power</string>
    <string name="offline_enabled">Offline debugging enabled</string>
    <string name="offline_disabled">Offline debugging disabled</string>
    <string name="replace_with_action">Replace with your own action</string>
    <string name="motor_speed">Speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="preferences">App preferences</string>
    <string name="title_offline_preference">Offline mode</string>
    <string name="summary_offline_preference">Allow joystick to function without connecting to robot</string>
    <string name="title_IP_preference">Robot IP address</string>
    <string name="summary_IP_preferance">Default IP address of the robot</string>
    <string name="error_generic">Something failed</string>
    <string name="text_joystick_not_enabled">Joystick not enabled: No connection or no Offline Mode</string>
    <string name="action_search">Search</string>
    <string name="confirm_search">Do you want to start searching for the robot IP Address?</string>
    <string name="in_search">This may take a while...</string>
    <string name="title_in_search">Searching</string>
    <string name="text_success_notification">An address was succesfully found!</string>
    <string name="title_notification">Results from address search</string>
    <string name="text_failure_notification">No suitable address found...</string>
    <string name="channel_name">Rover controller</string>
    <string name="channel_description">Notifications to inform about address discovery</string>
</resources>