<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">


    <com.zerokol.views.joystickView.JoystickView
        android:id="@+id/joystickControll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtController"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controller"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toStartOf="@+id/txtAngle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:text="@string/angle"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDirection"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLeftPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_power"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toStartOf="@+id/txtController"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDirection" />

    <TextView
        android:id="@+id/txtRightPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_power"
        app:layout_constraintBottom_toTopOf="@+id/joystickControll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtController"
        app:layout_constraintTop_toBottomOf="@+id/txtAngle"
        app:layout_constraintVertical_bias="0.473" />

</android.support.constraint.ConstraintLayout>